--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -1,8 +1,12 @@
+a2wsgi==1.8.0
 blinker==1.7.0
 click==8.1.7
 Flask==3.0.0
 Flask-Cors==4.0.0
+h11==0.14.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+redis==5.0.1
+uvicorn==0.24.0.post1
 Werkzeug==3.0.1
